# ForgeRoot

./: .gitignore  0001_event_inbox.sql  00_ForgeRoot_blueprint_設計図.md  00_ForgeRoot_blueprint_設計書.md  00_ForgeRoot_blueprint_設計書_続き.md  01_DECISION_LOG.md  01_単語や命名規則  02_README.md  02_REPO_MAP.md  03_INTERFACE_REGISTRY.md  03_issue.md  03_issue_T041-2_integrated.diff  03_issue_T041-2_integrated.md  03_issue_続き  Cargo.toml  ForgeRoot_T001_tree.txt  ForgeRoot_T004_tree.txt  ForgeRoot_T005_tree.txt  ForgeRoot_T008_tree.txt  ForgeRoot_T014_tree.txt  ForgeRoot_T016_tree.txt  ForgeRoot_T017_planner_runtime.diff  ForgeRoot_T017_planner_test_output.txt  ForgeRoot_T018_worktree_branch_manager.diff  ForgeRoot_T018_worktree_branch_test_output.txt  ForgeRoot_T019_executor_sandbox_harness.diff  ForgeRoot_T019_validation_output.txt  ForgeRoot_T023_auditor_runtime.diff  ForgeRoot_T023_validation_output.txt  ForgeRoot_T024_pr_composer.diff  ForgeRoot_T024_validation_output.txt  ForgeRoot_T025_github_pr_adapter.diff  ForgeRoot_T025_validation_output.txt  ForgeRoot_T026_approval_checkpoint.diff  ForgeRoot_T026_validation_output.txt  ForgeRoot_T027_rate_governor_queue.diff  ForgeRoot_T027_validation_output.txt  ForgeRoot_T028_e2e_forged_pr_demo.diff  ForgeRoot_T028_validation_output.txt  ForgeRoot_T040_sarif_bridge.diff  (+66 more)
.forge/: README.md  mind.forge
.github/: README.md
apps/: README.md
crates/forge-kernel/: Cargo.toml  README.md
crates/forge-kernel/src/: canonical.rs  error.rs  lib.rs  main.rs  parser.rs  source.rs  validate.rs
crates/forge-kernel/tests/: conformance.rs
(+148 files in other folders)
