[package]
name = "forge-kernel"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Canonical parser and hash kernel for ForgeRoot .forge v1 documents."

[lib]
name = "forge_kernel"
path = "src/lib.rs"

[[bin]]
name = "forge-kernel"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "1.0"
unicode-normalization = "0.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
